# identity-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 5361f3b69e6a_add_authorization_codes_table_for_.py  91e3dcbe3e16_initial_database_schema.py
identity_service/: __init__.py  cli.py  main.py
identity_service/adapters/jwt/: __init__.py
identity_service/adapters/postgres/: repositories.py
identity_service/adapters/redis/: __init__.py
identity_service/api/: exceptions.py
identity_service/api/dependencies/: auth.py  database.py
identity_service/api/routes/: authorize.py  clients.py  health.py  oauth2.py  users.py
identity_service/application/dto/: schemas.py
identity_service/application/use_cases/: client_service.py  oauth2_service.py  user_service.py
identity_service/domain/entities/: __init__.py
identity_service/infrastructure/: container.py
identity_service/infrastructure/config/: settings.py
identity_service/infrastructure/database/: connection.py  models.py
identity_service/ports/cache/: __init__.py
identity_service/ports/repositories/: __init__.py
identity_service/ports/tokens/: __init__.py
scripts/: generate_keys.py
tests/: conftest.py
tests/unit/: test_client_service.py  test_entities.py  test_oauth2_service.py  test_user_service.py
